# tenx-cursor-3-5

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRONTEND_SETUP.md  Makefile  PROGRESS_REPORT.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  verify_mcp.ps1  verify_mcp.sh
.cursor/: agent.mdc  mcp.json
.github/workflows/: main.yml
.specify/memory/: constitution.md
Delivery-Challenge/reports/: day1-fde-report.md
alembic/: env.py
alembic/versions/: 001_initial_schema_trends_and_platform_connections.py
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/trends/: page.tsx
frontend/components/: AgentCard.tsx  StatusBadge.tsx  TrendCard.tsx
mcp_servers/: README.md
mcp_servers/openclaw/: __init__.py
mcp_servers/social_media/: __init__.py
scripts/: run_api.py
skills/content_generation/: README.md
skills/engagement_management/: README.md
skills/trend_research/: README.md
specs/: openclaw_integration.md
specs/1-trend-research-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-trend-research-agent/checklists/: requirements.md
specs/1-trend-research-agent/contracts/: mcp-twitter-server.yaml
specs/2-content-generation-pipeline/: spec.md
specs/2-content-generation-pipeline/checklists/: requirements.md
specs/3-engagement-manager/: spec.md
specs/4-safety-layer/: spec.md
specs/5-openclaw-integration/: spec.md
src/: __init__.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/config/: security.py  settings.py
src/mcp_servers/: __init__.py
src/models/: __init__.py  platform_connection.py  trend.py
src/services/: mcp_client.py  redis_client.py  weaviate_client.py
src/skills/: __init__.py
src/utils/: error_handler.py  mcp_sense_logger.py
tests/: README.md  conftest.py  run_tests_demo.py  test_api_endpoints.py  test_security.py  test_trend_research_agent.py
(+5 files in other folders)
