[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Factory"
authors = [{name = "Bethelhem Abay"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]
ml = ["openai", "langchain", "chromadb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-managed"